kustomizations/apps/epp/preview/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: epp
  namespace: epp
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  rules:
  - host: ${app_hostname}
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: epp-client
            port:
              number: 3000
  tls:
  - hosts:
    - ${app_hostname}
    secretName: epp-tls
